--- a/DPstyle.css
+++ b/DPstyle.css
@@ -1,184 +1,196 @@
-:root{
-    --accent-color: rgb(120, 120, 167);
-    --card-accent: rgb(134, 90, 90);
-    --outer-space: #33393f;
-    --bright-turquoise: #2aefcb;
-    --gin: #e0eae4;
-    --heliotrope: #e866ec;
-}
 * {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;  
-}
-
-/* .container_row {
-    top: 0;
-    bottom: 0;
-    padding: 20px;
-}
-    .layer1 {
-        position: absolute;
-        z-index: 1;
-    }
-    .layer2 {
-        position: absolute;
-        z-index: 2;
-    } */
-.justify-center {
-    justify-content: center;
-}
-
-.selling-points {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: column;
-    width: 90%;
-    height: 100vh;
-    margin: 0 auto;
-    border-style: solid;
-    border-width: 2px;
-}
-
-.filler-img {
-    background-color: rgba(102, 158, 107, 0.925);
-    width: 100%;
-    padding: 20px;
-    height: 200px;
-    border: 1px solid black;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
-}
-
-body {
-    position: relative;
-    font-family: "Goudy Bookletter 1911", sans-serif;
-    font-size: 20px;
-    background-color: #FDF8F5;
-    color: #3d3635;
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
 }
 
-header {
-    padding: 60px;
-    text-align: center;
-    background: #3f6e43;
-    color: rgb(255, 255, 255);
+body {
+    background-color: #a7c6e4;
 }
 
-h1 {
-    /* 4rem = 40px (4 * 10px) */
-    font-size: 4rem;
+.header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #9e5006;
+    color: #ffffff;
 }
 
-h2 {
-    font-size: 3.5rem;
-    text-decoration: solid;
-    text-align: center;
+.header h1 {
+    display: inline-block;
+    font-size: 48px;
 }
 
-h3 {
-    font-size: 3rem;
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
 
-h4 {
-    font-size: 2.5rem;
+.header div ul {
+    list-style-type: none;
 }
 
-nav {
-    display: flex;
-    background-color: #365041;
-    justify-content: center;
-    margin-top: 5%;
-}
-button {
-    width: 250px;
-    margin: -4rem 0 1.5rem 0;
-    font-size: 100%;
-    color: #365041;
-    background-color: #fff;
-    border: 3px solid #133d26;
-    align-items: center;
-    transition: all 0.5s ease-in-out;
+.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
 }
 
-button:hover {
-    background-color: #8cad58;
-    color: #133d26;;
-}
-
-button:active {
-    font-size: 180%;
-    box-shadow: 0 0 10px #000 inset;
-}
-
-
-button:focus {
-    outline: none;
-    border-color: #55a875;
-}
-
-
-/* nav a {
-    color: #13293d;
-    padding: 14px 20px;
+a {
+    color: #ffffff;
     text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/870-536x354-blur_2-grayscale.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+.content {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.projects {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+.project-one {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.project-two {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.project-three {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.project-one h3 {
+    margin-bottom: 10px;
     text-align: center;
 }
 
-nav p {
-    padding: 14px 20px;
-    text-decoration: none;
-} */
-
-main {
-    display: flex;
-    padding: 60px 0; 
-}
-
-aside {
-    flex: 1;
-    background-color: #b9c6ae;
-    padding: 20px;
-}
-
-section {
-    flex: 3;
-    flex-direction: column;
-    background-color: #fff;
-    padding: 20px;
-}
-
-footer {
-    padding: 20px;
+.project-two h3 {
+    margin-bottom: 10px;
     text-align: center;
-    background: #13293d;
-    color: #fff;
 }
 
-
-
-@media screen and (max-width: 992px) {
-header {
-    background: #b6655b;
-}
+.project-three h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
-@media screen and (max-width: 768px) {
-nav {
-    background-color: #6d3f41;
-}
+.project-one img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
 
-@media screen and (max-width: 576px) {
-.filler-img {
-    background-color: #8ac4ff;
+.project-two img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
+
+.project-three img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+.contact-me {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.my-work {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.about-me {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.contact-me img {
+    max-height: 200px;
+}
+
+.my-work img {
+    max-height: 200px;
+}
+
+.about-me img {
+    max-height: 200px;
+}
+
+.contact-me h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.my-work h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.about-me h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+.footer h2 {
+    font-size: 20px;
 }
